objects/CSS_OEM_AFFILIATIONS__c.object
<CustomObject>
    <fields>
        <fullName>AFFILIATION_ROW_ID__c</fullName>
        <description>External ID for SPAffiliations Service</description>
        <externalId>true</externalId>
        <label>AFFILIATION_ROW_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFFILIATION__c</fullName>
        <label>AFFILIATION</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS_OEM_AFFILIATIONS</relationshipLabel>
        <relationshipName>CSS_OEM_AFFILIATIONS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_BY__c</fullName>
        <label>LAST_UPDATED_BY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_UPDATED_DATE__c</fullName>
        <label>LAST_UPDATED_DATE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY__c</fullName>
        <label>PRIMARY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_CODE__c</fullName>
        <label>SP_CODE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_NAME__c</fullName>
        <label>SP_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpRowId__c</fullName>
        <label>SpRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CSS_OEM_AFFILIATIONS</label>
    <nameField>
        <label>CSS_ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_OEM_AFFILIATIONS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>